# src/main/resources/swagger.json
@@ -160,6 +160,34 @@
           }
         }
       }
+    },
+    "/delete": {
+      "get": {
+        "tags": [
+          "api"
+        ],
+        "operationId": "updateTask",
+        "produces": [
+          "text/html"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "type": "string"
+            },
+            "headers": {}
+          }
+        }
+      }
     }
   }
 }
